add bootstrap cdn + bootstrap icon cdn

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -18,11 +18,11 @@
 
   <% else %>
     <li>    
-      <%= link_to "Sign in", new_user_session_path %>
+      <i class="bi bi-arrow-right-short"></i><%= link_to "Sign in", new_user_session_path %>
     </li>
 
     <li>
-      <%= link_to "Sign up", new_user_registration_path %>
+      <i class="bi bi-arrow-right-short"></i><%= link_to "Sign up", new_user_registration_path %>
     </li>
 
   <% end %>
