--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,27 +1,46 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Keella</a>
+    <a class="navbar-brand" href="<%= root_path  %>">Keella</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse collapse show d-flex justify-content-between" id="navbarsExample03" style="">
-      <ul class="navbar-nav mb-2 mb-sm-0">
+    <div class="navbar-collapse collapse show" id="navbarsExample03" style="">
+      <ul class="navbar-nav me-auto mb-2 mb-sm-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="<%= root_path  %>">Accueil</a>
         </li>
       </ul>
-      <form>
-        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-      </form>
+      <div class="me-auto">
+
+        <form>
+          <div class="d-flex gap-1">
+            <div>
+              <label for="">Adresse</label>
+              <input class="form-control" type="text" placeholder="Lieu" aria-label="Lieu">
+            </div>
+            <div>
+              <label for="">Date</label>
+              <input class="form-control" type="text" placeholder="Date" aria-label="Date">
+            </div>
+
+          </div>
+        </form>
+
+      </div>
       <ul class="navbar-nav me-1 mb-2 mb-sm-0">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Connexion</a>
-          <ul class="dropdown-menu" aria-labelledby="dropdown03">
-            <li><a class="dropdown-item" href="#">Se connecter</a></li>
-            <li><a class="dropdown-item" href="#">S'inscrire</a></li>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown03">
+            <% if user_signed_in? %> 
             <li><a class="dropdown-item" href="#">Mes réservations</a></li>
             <li><a class="dropdown-item" href="#">Proposer une séance</a></li>
+            <li><%= link_to "Mon profil", user_path(current_user.id), class: "dropdown-item" %></li>
+            <li><%= button_to "Se deconnecter", destroy_user_session_path, method: :delete, data: {turbo: true, turbo_method: :delete, turbo_confirm: "Vous etes sure de vouloir vous déconnecter ?"}, class: "dropdown-item" %></li>
+            <% else %>
+            <li><%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %></li>
+            <li><%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %></li>
+            <% end %>
           </ul>
         </li>
       </ul>
