--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
+<main class=" d-flex align-items-center px-5 pt-5 my-5 ">
+  <div class="form-signin w-40 m-auto">
+    <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary">
+      <h2>Mot de passe oublié ?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :email,class:"floatingInput" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
+        </div>
+        <br>
+        <div class="actions">
+          <%= f.submit "réinitialisation du mot de passe",class:"w-100 py-2 mb-2 btn btn-outline-primary rounded-3" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</main>
