--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
-<main class=" d-flex align-items-center px-5 pt-5 my-5">
+<main class=" d-flex align-items-center pt-5 my-5">
   <div class="form-signin w-40 m-auto">
-    <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary">
+    <div class="modal-body p-3 rounded-4 shadow bg-body-tertiary">
       <h2>Renvoyer les informations de confirmation</h2>
 
       <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
