--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<main class=" d-flex align-items-center px-5 pt-5 my-5 ">
+<main class=" d-flex align-items-center pt-5 my-5 ">
   <div class="form-signin w-40 m-auto">
     <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary">
       <h2>Mot de passe oublié ?</h2>
