update db connexion

--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -2,13 +2,13 @@
   <section>
 
   </section>
-    <div>Photo</div>
+    <div><%= image_tag 'logokeella.png', alt: "workout-image" %></div>
   <section>
     <div class="row">
 
       <div class="col col-sm-8">
         <h2><%= @workout.title %></h2>
-        <div><i class="bi bi-star">Note de la seance</i></div>
+        <div><i class="bi bi-star">Note</i></div>
         <hr>
         <div>
           <div>Logo hote</div>
