--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,14 +14,15 @@
 <% end %>
 <div class="container mt-3">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-5">
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <%=  image_tag "iconeuser.png", alt: "Description de l'image", class: "ml-3" %>
-                        <div>
+                        <%=  image_tag "iconeuser.png", alt: "Description de l'image", class: "ms-auto me-3" %>
+                        <div class="me-auto">
                             <p>Email: <%= @user.email %></p>
-                            <p>Utilisateur: <%= @user.id %></p>
+                            <p>nombre de séance <%= @nombre %> </p>
+                            <p>nombre de réservation <%= @number %> </p>
                         </div>
                     </div>
                 </div>
@@ -29,11 +30,12 @@
         </div>
     </div>
 </div>
-<div class="container mt-3">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-                <p>nombre de séance <%= @nombre %> </p>
-                <p>nombre de réservation <%= @number %> </p>
+<div class="container ">
+    <p>commentaires:</p>
+    <div class="col-md-3">
+        <div class="card">
+            <div class="mt-2">
+                <p>ajouter les commentaires</p>
             </div>
         </div>
     </div>
