--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,46 +1,47 @@
-
-
-
-    <%= render 'searchbar' %>
+<%= render 'searchbar' %>
   
     <div class="album py-5 text-center container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <% @workouts.each_with_index do |workout, index| %> 
-                <div class="col <%= index % 3 == 2 ? 'mb-4' : '' %>">
                 <a href="<%= workout_path(workout) %>">
-                    <div class="card shadow" style="max-width: 40rem;">
-                        <%= image_tag 'logokeella.png', alt: "workout-image", class: "card-img-top" %>
+                    <div class="card shadow" style="max-width: 40rem; height: 350px;">
+                            <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
                         <div class="card-title-container border rounded p-2">
-                            <h5 class="card-title"><%= workout.title %></h5>
-                            <i class="bi bi-star-fill">Note de l'hote</i>
+                                <h5 class="card-title"><%= workout.title %></h5>
+                                    <i class="bi bi-star-fill">Note de l'hote</i>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <i class="bi bi-currency-dollar"></i>
-                                    <%= workout.price %>
-                            </li>
-  
-                            <li class="list-group-item">
-                                <i class="bi bi-calendar-check"></i>
-                                    <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
-                                    
-                            </li>
-  
-                            <li class="list-group-item">
-                                <i class="bi bi-calendar-x-fill"></i>
-                                    <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
-                            </li>
-                            
-                            <li class="list-group-item">
-                                <i class="bi bi-geo-alt"></i>
-                                    <%= workout.location %>
-                                    <%= link_to workout_path(workout) do %>
-                                        <% end %>
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <i class="bi bi-currency-dollar"></i>
+                                        <%= workout.price %>
+                                    </li>
+                      
+                                    <li class="list-group-item">
+                                        <i class="bi bi-geo-alt"></i>
+                                        <%= workout.city.name %>
+                                    </li>
+                                </ul>
+                            </div>
+                        
+                            <div class="col">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <i class="bi bi-calendar-x-fill"></i>
+                                        <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
+                                    </li>
+
+                                    <li class="list-group-item">
+                                        <i class="bi bi-calendar-check"></i>
+                                        <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                    </a>
-                </div>
+                </a>
+               
             <% end %>
         </div>
     </div>
