--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,55 @@
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card-body text-center"> 
-                <h1 class="card-title">Profil de <%= @user.email %></h1>
+<div class="p-3 m-0 border-0 bd-example m-0 border-0 row row-cols-1 row-cols-md-2 g-4">
+    <div class="col"> 
+        <div class="card ms-auto" style="max-width: 22rem;">
+            <%=  image_tag "iconeuser.png", alt: "Description de l'image" %>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card me-auto h-100">
+            <h1 class="card-title">Profil de <%= @user.email %></h1>
+            <div class="card-body">
+                <%= link_to "Modifier le profil", edit_user_registration_path, class: "btn btn-outline-primary" %>
+                <%= link_to "Supprimer le profile", registration_path(@user), :method => :delete, class: "btn btn-outline-danger", id: "delete_comment_button" %>
+                <div class="card-footer mt-2">
+                    <p>Email: <%= @user.email %></p>
+                    <p>ville: <%= @user.city.name %></p>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-<% if current_user == @user %>
-    <div class="d-flex justify-content-center">
-        <%= link_to "Modifier le profil", edit_user_registration_path, class: "btn btn-outline-primary" %>
+    <div class="col">
+        <div class="card ms-auto h-100" style="max-width: 22rem;">
+            <p class="ms-3">nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
+            <div class="card-body">
+                <p>nombre de réservations: <%= @user.reserved_workouts.count %> </p>
+            </div>
+        </div>
     </div>
-<% end %>
-<div class="container mt-3">
-    <div class="row justify-content-center">
-        <div class="col-md-5">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                        <%=  image_tag "iconeuser.png", alt: "Description de l'image", class: "ms-auto me-3" %>
-                        <div class="me-auto">
-                            <p>Email: <%= @user.email %></p>
-                            <p>nombre de séance <%= @nombre %> </p>
-                            <p>nombre de réservation <%= @number %> </p>
-                        </div>
-                    </div>
+    <div class="col">
+        <div class="card me-auto h-100">
+            <p class="card-header">Commentaires:</p>
+            <div class="card-body">
+                <p>ajouter les commentaires</p>
+            </div>
+            <div class="card-footer">
+                <div class="mb-3">
+                    <label class="form-label">Laissez un commentaire</label>
+                    <textarea class="form-control" id="TexteAreaForComments" rows="5"></textarea>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container ">
-    <p>commentaires:</p>
-    <div class="col-md-3">
-        <div class="card">
-            <div class="mt-2">
-                <p>ajouter les commentaires</p>
-            </div>
-        </div>
-    </div>
-</div>
+
+<p id="notice"><%= notice %></p>
+
+ <%= @post.title %>
+ <br>
+ <%= @post.text %>
+ <br>
+
+ <%= render "comments/form", comment: @comment%>
+
+ <%= link_to 'Edit', edit_post_path(@post) %> |
+ <%= link_to 'Back', posts_path %>
