--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="col">
-        <div class="card ms-auto h-100" style="max-width: 22rem;">
+        <div class="card ms-auto" style="max-width: 22rem;">
             <p class="ms-3">nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
             <div class="card-body">
                 <p>nombre de réservations: <%= @user.reserved_workouts.count %> </p>
@@ -41,15 +41,3 @@
         </div>
     </div>
 </div>
-
-<p id="notice"><%= notice %></p>
-
- <%= @post.title %>
- <br>
- <%= @post.text %>
- <br>
-
- <%= render "comments/form", comment: @comment%>
-
- <%= link_to 'Edit', edit_post_path(@post) %> |
- <%= link_to 'Back', posts_path %>
