--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,28 +1,66 @@
-<main class="row">
-    <section class="row bg-primary px-4 py-5 rounded text-center">
-        <h1 class="text-light">Propose ta séance</h1>
-    </section>
-    <br>
-    <div class="row bg-secondary rounded px-4 py-5 text-center">
-        <div class="col">
+
+<section class="bg-primary py-5 text-center">
+    <h1 class="text-light">Propose ta séance</h1>
+</section>
+
+<section class="container align-items-center">
+    <div class="row text-center py-5 bg-tertiary rounded-4 shadow">
+        <div class="col-lg-4">
+            <div>
+                <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+            </div>
             <p>Image 1</p>
+            <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
         </div>
-        <div class="col">
-            <p>Image 1</p>
+        <div class="col-lg-4">
+            <div>
+                <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+            </div>
+            <p>Image 2</p>
+            <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
         </div>
-        <div class="col">
-            <p>Image 1</p>
+        <div class="col-lg-4">
+            <div>
+                <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+            </div>
+            <p>Image 3</p>
+            <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
         </div>
     </div>
-    <div>
-        <p>
-        t.string :title
-        t.datetime :start_date
-        t.datetime :end_date
-        t.integer :participant_number
-        t.text :description
-        t.decimal :price
-        t.string :location
-        </p>
+</section>
+
+<section class="align-items-center">
+    <div class="form container my-4 py-4 rounded-4 bg-tertiary rounded-4 shadow">
+        <%= form_with(model: @event, local: true) do |form| %>
+        <div class="col py-2">
+            <%= form.label :title, "Titre",class:"floatingInput" %>
+            <%= form.text_field :title,class:"form-control" %>
+
+            <%= form.label :price, "Prix",class:"floatingInput" %>
+            <%= form.number_field :price, step: "1",class:"form-control" %>
+
+            <%= form.label :description, "Description",class:"floatingInput" %>
+            <%= form.text_area :description,class:"form-control", rows: 4, style: "resize: none;" %>
+        </div>
+        <div class="col py-3">
+            <%= form.label :participant_number, "Nombre de participants",class:"floatingInput" %>
+            <%= form.number_field :participant_number,class:"form-control" %>
+
+            <%= form.label :location, "Lieu",class:"floatingInput" %>
+            <%= form.text_field :location,class:"form-control" %>
+        </div>
+        <div class="col py-3">
+            <%= form.label :start_date, "Date de début",class:"floatingInput" %>
+            <%= form.datetime_field :start_date,class:"form-control" %>
+
+            <%= form.label :end_date, "Date de fin",class:"floatingInput" %>
+            <%= form.datetime_field :end_date,class:"form-control" %>
+            <br>
+            <%= form.submit "Créer",class:"w-100 py-2 mb-2 btn btn-primary rounded-3" %>
+        </div>
+        <% end %>
     </div>
-</main>
+</section>
