mail to host ok but link doesn't work

--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -19,7 +19,7 @@
       Dans le cas où les boutons ne fonctionnent pas, veuillez copier-coller les liens des boutons dans votre navigateur.
     </p>
     <p>
-      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : 
+      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <%= link_to 'mes annonces', users_path %>
     </p>
     <p> À très vite sur keella.fly.dev !</p>
   </body>
