--- a/app/views/user_mailer/reservation_email.html.erb
+++ b/app/views/user_mailer/reservation_email.html.erb
@@ -17,7 +17,7 @@
       </ul>
     </p>
     <p>
-      Vous pouvez consulter plus de détails en vous connectant à votre compte.
+      Vous pouvez consulter plus de détails en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
     </p>
     <p>
       Merci,
