--- a/app/views/user_mailer/reservation_email.txt.erb
+++ b/app/views/user_mailer/reservation_email.txt.erb
@@ -7,7 +7,7 @@ Utilisateur : <%= @reservation.user.email %>
 Séance d'entraînement : <%= @reservation.workout.title %>
 Date : <%= @reservation.created_at %>
 
-Vous pouvez consulter plus de détails en vous connectant à votre compte.
+Vous pouvez consulter plus de détails en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
 
 Merci,
 Votre équipe
