--- a/app/views/user_mailer/reservation_email.html.erb
+++ b/app/views/user_mailer/reservation_email.html.erb
@@ -14,10 +14,11 @@
         <li>Utilisateur : <%= @reservation.user.email %></li>
         <li>Séance d'entraînement : <%= @reservation.workout.title %></li>
         <li>Date : <%= @reservation.created_at %></li>
+        <li>Status : <%= @reservation.status %></li>
       </ul>
     </p>
     <p>
-      Vous pouvez consulter plus de détails en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
+    Vous pouvez accepter ou refuser cette réservation en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
     </p>
     <p>
       Merci,
