--- a/app/views/user_mailer/reservation_email.txt.erb
+++ b/app/views/user_mailer/reservation_email.txt.erb
@@ -6,8 +6,9 @@ Voici les détails de la réservation :
 Utilisateur : <%= @reservation.user.email %>
 Séance d'entraînement : <%= @reservation.workout.title %>
 Date : <%= @reservation.created_at %>
+Status : <%= @reservation.status %>
 
-Vous pouvez consulter plus de détails en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
+Vous pouvez accepter ou refuser cette réservation en vous connectant à votre compte, rubrique réservation <%# <%= link_to 'Reservation', reservation_url %>
 
 Merci,
 Votre équipe
