--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -10,16 +10,10 @@
     </p>
     <p>
       Veuillez vérifier les places disponible avant d'accepter une personne
-    </p>
-    <div class="d-flex">
-      
-      
-    </div>
+    </p>    
+    <button><a href="<%= user_url(@user) %>">Voir son profil</a></button>
     <p>
-      Dans le cas où les boutons ne fonctionnent pas, veuillez copier-coller les liens des boutons dans votre navigateur.
-    </p>
-    <p>
-      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <%= link_to 'mes annonces', users_path %>
+      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <a href="<%= edit_workout_reservation_url(@workout, @reservation) %>">Mon compte</a>
     </p>
     <p> À très vite sur keella.fly.dev !</p>
   </body>
