Add Helper + partial _flash.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body data-turbo="false">
     <%= render "layouts/navbar" %>
+    <%= render 'layouts/flash'%>
     <%= yield %>
 
     <%= render 'layouts/footer' %>
