--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -43,7 +43,11 @@
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
             </ul>
             <div>
-              <%= button_to 'Envoyer une demande de réservation', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>
+              <% if @place_available > 0 %>
+                <%= button_to 'Envoyer une demande de réservation', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>
+              <% else %>
+              <p>Il n'y a plus de place pour cette séance</p>
+              <% end %>
             </div>
           </div>
         </div>
