--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Reservations#index</h1>
-<p>Find me in app/views/reservations/index.html.erb</p>
+<h1>Historique des réservations</h1>
+
+<% @reservations.each do |reservation| %>
+    <div class="card mb-3 border border-2" style="max-width: 80%;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title"><%= reservation.workout.title %></h5>
+            <p class="card-text">Utilisateur : <%= reservation.user.email %></p>
+            <p class="card-text">Date : <%= reservation.created_at.strftime("%d/%m/%Y %H:%M") %></p>
+            <p class="card-text">Status : <%= reservation.status %></p>
+            <p class="card-text"><small class="text-body-secondary">Dernière mise à jour <%= reservation.updated_at.strftime("%d/%m/%Y %H:%M") %></small></p>
+            <div class="row">
+            <div class="btn-group">
+              <%= button_to 'Payer', '#', method: :get, class: 'btn btn-primary' %>
+              <%= button_to 'Relancer la demande', '#', method: :get, class: 'btn btn-secondary' %>
+              <%= button_to 'Annuler', '#', method: :get, class: 'btn btn-danger' %>
+              <%= button_to 'La séance s\'est bien passée', '#', method: :get, class: 'btn btn-success' %>
+            </div>
+          </div>
+          
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  
+  
