--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,8 @@
             <div class="card-body">
                 <h5 class="card-title">Cliquez pour voir vos reservations</h5>
                 <div class="card-footer">
-                    <button type="button" class="btn btn-secondary btn-lg">Reservations</button>
+                    
+                    <%= link_to 'Reservations', reservations_path, class: 'btn btn-secondary btn-lg' %>
                 </div>
             </div>
         </div>
