--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -46,7 +46,7 @@
               <% if @place_available > 0 %>
                 <%= button_to 'Envoyer une demande de réservation', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>
               <% else %>
-              <p>Il n'y a plus de place pour cette séance</p>
+                <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary disabled" %>
               <% end %>
             </div>
           </div>
