--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,29 +2,35 @@
 
 <% @reservations.each do |reservation| %>
     <div class="card mb-3 border border-2" style="max-width: 80%;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title"><%= reservation.workout.title %></h5>
-            <p class="card-text">Utilisateur : <%= reservation.user.email %></p>
-            <p class="card-text">Date : <%= reservation.created_at.strftime("%d/%m/%Y %H:%M") %></p>
-            <p class="card-text">Status : <%= reservation.status %></p>
-            <p class="card-text"><small class="text-body-secondary">Dernière mise à jour <%= reservation.updated_at.strftime("%d/%m/%Y %H:%M") %></small></p>
-            <div class="row">
-            <div class="btn-group">
-              <%= button_to 'Payer', '#', method: :get, class: 'btn btn-primary' %>
-              <%= button_to 'Relancer la demande', '#', method: :get, class: 'btn btn-secondary' %>
-              <%= button_to 'Annuler', '#', method: :get, class: 'btn btn-danger' %>
-              <%= button_to 'La séance s\'est bien passée', '#', method: :get, class: 'btn btn-success' %>
+        <div class="row g-0">
+            <div class="col-md-4">
+                <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
             </div>
-          </div>
-          
-          </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= reservation.workout.title %></h5>
+                        <p class="card-text">Utilisateur : <%= reservation.user.email %></p>
+                        <p class="card-text">Date : <%= reservation.created_at.strftime("%d/%m/%Y %H:%M") %></p>
+                        <p class="card-text">Status : <%= reservation.status %></p>
+                        <p class="card-text"><small class="text-body-secondary">Dernière mise à jour <%= reservation.updated_at.strftime("%d/%m/%Y %H:%M") %></small></p>
+                    <div class="row">
+                        <div class="btn-group">
+                            <% if reservation.status == 'accepted' %>
+                                <%= button_to 'Note ton hôte', '#', method: :get, class: 'btn btn-primary' %>
+                                <%= button_to 'Annuler', '#', method: :get, class: 'btn btn-danger' %>
+                            <% elsif reservation.status == 'pending' %>
+                                <%= button_to 'Relancer la demande', '#', method: :get, class: 'btn btn-secondary' %>
+                            <% elsif reservation.status == 'refused' %>
+
+                            
+                            <% elsif reservation.status == 'closed' %>
+                                <%= button_to 'Laisse un commentaire', '#', method: :get, class: 'btn btn-success' %>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
   <% end %>
   
