--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="p-3 m-0 border-0 bd-example m-0 border-0 row row-cols-1 row-cols-md-2 g-4">
     <div class="col"> 
         <div class="card ms-auto" style="max-width: 22rem;">
-            <%=  image_tag "iconeuser.png", alt: "Description de l'image" %>
+            <%=  image_tag "iconeuser.png", alt: "image de profile" %>
         </div>
     </div>
     <div class="col">
