--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -18,21 +18,58 @@
     </p>
   </div>
 </div>
-<div class="d-flex justify-content-center p-5 mb-2 ">
-  <div class="h-100" >
-    <h5 class="text-center mb-4 ms-5" style="max-width: 30rem;">Vous disposez d’équipement sportif de qualité et vous souhaitez les partagés avec la communauté ? </h5>
-    <div class="card d-flex justify-content-center mb-4">
+<div class="container">
+  <div class="row justify-content-center align-items-center vh-100" >
+    <h5 class="col-12 text-center" style="max-width: 30rem;">Vous disposez d’équipement sportif de qualité et vous souhaitez les partagés avec la communauté ? </h5>
+    <div class="card border-0 d-flex justify-content-center mb-4">
       <%=  image_tag "landing_page2.png", alt: "image de profile" %>
     </div>
     <div class="d-flex justify-content-center">
-      <button type="button" class="btn btn-outline-secondary btn-lg m-0 ">Proposez votre équipement a la communauté</button>
+      <%= link_to "Proposez votre équipement a la communauté", new_workout_path, class: "btn btn-outline-secondary btn-lg m-0" %>
     </div>
   </div>
 </div>
-
-
-
-
+<div class="album py-5 text-center container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <% @workouts.take(3).each_with_index do |workout, index| %> 
+      <a href="<%= workout_path(workout) %>">
+        <div class="card shadow" style="max-width: 40rem; height: 350px;">
+          <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
+          <div class="card-title-container border rounded p-2">
+            <h5 class="card-title"><%= workout.title %></h5>
+            <i class="bi bi-star-fill">Note de l'hote</i>
+          </div>
+          <div class="row">
+            <div class="col">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <i class="bi bi-currency-dollar"></i>
+                  <%= workout.price %>
+                </li>
+                <li class="list-group-item">
+                  <i class="bi bi-geo-alt"></i>
+                  <%= workout.city.name %>
+                </li>
+              </ul>
+            </div>
+            <div class="col">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <i class="bi bi-calendar-x-fill"></i>
+                  <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
+                </li>
+                <li class="list-group-item">
+                  <i class="bi bi-calendar-check"></i>
+                  <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </a>
+    <% end %>
+  </div>
+</div>
 <div class="d-flex justify-content-center">
   <%= link_to "Voir toutes les locations", workouts_path, class: "btn btn-outline-secondary btn-lg m-0" %>
 </div>
