view landing page 3

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,15 +6,13 @@
   </div>
   <div class="me-auto h-100 mt-5" >
     <h1 class="mb-4">(Re)Découvrez vos talents sportifs</h1>
-    <h5 class="mb-4">Ici, vous pouvez loué un lieu de sport partout en france</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-    Donec dapibus malesuada enim eu dapibus. 
-    Donec tempor orci ut orci tempus vulputate. 
-    In eleifend nibh quis lacus luctus, vitae mattis lorem cursus. 
-    Mauris consequat laoreet est nec consectetur. Integer non tempor nunc. 
-    Phasellus imperdiet purus eu turpis venenatis, eget molestie risus finibus. 
-    Mauris eu tortor mi. Aliquam imperdiet eros vitae feugiat ullamcorper. 
-    Nunc porttitor mollis mauris, ac rhoncus metus finibus molestie.
+    <h5 class="mb-4">Ici, vous pourrez loué des équipements et des locaux sportif partout en france</h5>
+    <p>"Bonjour et bienvenue chez Keella !
+    Nous sommes votre plateforme de référence pour la location d'équipements sportifs entre particuliers. 
+    Que vous soyez un passionné de sport à la recherche d'équipement ou un propriétaire désireux de rentabiliser vos articles sportifs, nous avons la solution pour vous.
+    Avec notre vaste sélection d'équipements de qualité, mise à disposition par des particuliers comme vous, vous pouvez trouver tout ce dont vous avez besoin pour vos activités sportives préférées.
+    Nous facilitons la mise en relation entre locataires et propriétaires, garantissant une expérience fluide, sécurisée et conviviale pour tous.
+    Rejoignez-nous dès aujourd'hui et découvrez comment keella peut transformer votre manière de pratiquer le sport, en rendant l'accès à l'équipement plus facile et plus économique que jamais !
     </p>
   </div>
 </div>
