--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,6 +28,7 @@
             <div class="card-body">
                 <h5 class="card-title">Cliquez pour acceder a vos annonces</h5>
                 <div class="card-footer">
+                <%= link_to "Annonces", user_reservation_path(current_user.id,current_user.hosted_workouts), class: "btn btn-success btn-lg m-0" %>
                     <button type="button" class="btn btn-success btn-lg m-0">Annonces</button>
                 </div>
             </div>
