--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -11,7 +11,7 @@
     <p>
       Veuillez vérifier les places disponible avant d'accepter une personne
     </p>    
-    <button><a href="<%= user_url(@user) %>">Voir son profil</a></button>
+    <a href="<%= user_url(@user) %>">Voir son profil</a>
     <p>
       Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <a href="<%= edit_workout_reservation_url(@workout, @reservation) %>">Répondre à la demande</a>
     </p>
